--- a/week02/styles/media-query.css
+++ b/week02/styles/media-query.css
@@ -1,11 +1,14 @@
+/* media-query.css */
+
+/* Google Font - Roboto*/
 body {
     font-family: 'Roboto', sans-serif;
   }
   
   header, main, footer {
-    max-width: 640px;
-    margin: 1rem auto;
-    border: 1px solid lightgray;
+    max-width: 640px;  
+    margin: 1rem auto;  /* 1rem margin,  Auto centering  */
+    border: 1px solid lightgray; 
     padding: 1rem;
     background-color: rgb(177, 199, 255);
   }
