--- a/styles/temples.css
+++ b/styles/temples.css
@@ -86,8 +86,41 @@ footer {
     font-size: 30px;  
 }
 
+.menu-button {
+    display: none; 
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    border: none;
+    background: none;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+}
+
 @media (max-width: 600px) {
-    main {
-        grid-template-columns: 1fr; /* Only one column is displayed */
+    .menu-button {
+        display: block;
+    }
+
+    #menu ul {
+        display: none;
+        width: 100%;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        background-color: #333;
+        width: 100%;
+    }
+
+    #menu ul.is-active {
+        display: flex;
+    }
+
+    #menu ul li {
+        text-align: center;
+        padding: 10px;
+        width: 100%;
     }
 }
