--- a/styles/temples.css
+++ b/styles/temples.css
@@ -144,3 +144,9 @@ footer {
     }
 }
 
+footer {
+    padding: 5px 20px;  
+    font-size: 16px; 
+    position: relative; 
+    bottom: auto;  
+}
