--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,21 +1,38 @@
 nav ul {
-    padding: 0;
     display: flex;
     justify-content: center;
+    align-items: center;
+    padding: 0;
+    list-style: none;   
+    width: 100%;
 }
-
-nav ul li {
+   
+   nav ul li {
     margin: 0 20px;
-}
-
-main {
+   }
+   
+   main {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
     gap: 20px; 
-    align-items: start;  
-}
-
-figure {
+    align-items: start; 
+   }
+   
+   figure {
     margin: 0 auto;
-    width: 100%;  
+    width: 100%; 
+   }
+   
+   .menu-button {
+    display: none; 
+}
+   footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 20px;
+    position: fixed;   
+    bottom: 0;         
+    width: 100%;        
+    font-size: 25px;         
 }
