--- a/styles/place.css
+++ b/styles/place.css
@@ -82,13 +82,14 @@ main {
 }
 
 
-
-
-
 @media (max-width: 767px) {
+    .hero {
+        height: auto;
+    }
     .overlay {
         flex-direction: column;
         align-items: center;
+        padding: 0;
     }
     .data, .weather {
         width: 80%;
@@ -113,7 +114,6 @@ main {
         flex-direction: row;
         justify-content: space-between;
     }
-
     .data, .weather {
         width: 45%;
     }
