--- a/styles/place.css
+++ b/styles/place.css
@@ -97,13 +97,11 @@ main {
         height: auto;
     }
     .overlay {
-        flex-direction: column;
-        align-items: center;
-        padding: 0;
+        padding: 10px;
+        overflow-y: auto; /* Ensure vertical scrolling for mobile */
     }
     .data, .weather {
-        width: 90%;
-        margin: 10px 0;
+        width: 100%;
     }
     .weather h2 {
         display: flex;
