--- a/styles/place.css
+++ b/styles/place.css
@@ -81,19 +81,17 @@ main {
     
 }
 
-@media (max-width: 767px) {
+@media (max-width: 600px) {
     body {
-        padding: 0;
+        font-size: 16px;
     }
 
     header, footer {
         padding: 10px;
     }
 
-    main {
-        flex: 1;
-        display: block;
-        overflow-y: auto;
+    footer {
+        font-size: 14px;
     }
 
     .hero {
@@ -101,37 +99,22 @@ main {
     }
 
     .overlay {
+        flex-direction: column;
+        align-items: center;
         padding: 10px;
-        overflow-y: auto; /* Ensure vertical scrolling for mobile */
     }
 
     .data, .weather {
-        width: 100%;
+        width: calc(100% - 20px);
+        margin: 10px 0;
     }
 
-    .weather h2 {
-        display: flex;
-        align-items: center;
-    }
-
-    .weather h2::after {
-        content: url(images/weather_icon.svg);
-        margin-left: 10px;
+    .data {
+        margin-bottom: 20px;
     }
 
     .weather-icon {
         display: block;
-        margin: 10px auto;
-    }
-}
-
-@media (min-width: 768px) {
-    .overlay {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .data, .weather {
-        width: 90%;
+        margin-bottom: 10px;
     }
 }
