--- a/styles/place-mobile.css
+++ b/styles/place-mobile.css
@@ -48,21 +48,22 @@ main {
 }
 
 .data {
-    width: 90%;
+    width: 85%;
     background-color: #ffffff70;
     margin: 20px auto;
-    padding: 10px;
+    padding: 15px;
     border-radius: 5px;
     border: 1px solid #ffffff;
     text-align: center;
+    margin-bottom: 30px;
 }
 
 
 .weather {
-    width: 90%;
+    width: 85%;
     background-color: #ffffff70;
     margin: 20px auto;
-    padding: 10px;
+    padding: 15px;
     border-radius: 5px;
     border: 1px solid #ffffff;
     text-align: center;
